# django-slick-tables

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.py
demo/demo/: settings.py
slick_tables/: apps.py  headers.py  views.py
slick_tables/templates/slick_tables/: table.html
slick_tables/templates/slick_tables/headers/: default.html
slick_tables/tests/: tests.py
