[project]
name = "django-slick-tables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2",
    "django-htmx>=1.26.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
django-slick-tables = { workspace = true }

[dependency-groups]
dev = [
    "django-slick-tables",
    "django-stubs>=5.2.5",
    "djlint>=1.36.4",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "setuptools>=80.9.0",
]

[tool.mypy]
python_version = "3.12.2"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
exclude = [
    "venv/",
    "setup.py",
    "tests/"
]
